# trade_xtp

./: README.md
XTP_API_20230406_2.2.34.9/: changelist.txt
XTP_API_20230406_2.2.34.9/demo/XTPApiDemo/: CMakeLists.txt  README.md
XTP_API_20230406_2.2.34.9/demo/XTPApiDemo/api/: config.json  libxtpquoteapi.dylib  xquote_api_struct.h  xtpquoteapi.lib
XTP_API_20230406_2.2.34.9/demo/XTPApiDemo/src/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  quote_spi.cpp  quote_spi.h  trade_spi.cpp  trade_spi.h  xtp_api_demo.cpp
trade_system/src/core/market_data/: dataProcessor.cpp
trade_system/src/core/order/: orderManagement.cpp
trade_system/src/core/strategy/: strategyEngine.cpp
